add it url to index.html

--- a/index.html
+++ b/index.html
@@ -83,6 +83,45 @@
 		<section class="container-fluid custom-section-left">
   		<h1>程序猿网址导航</h1>
   		<div class="bk_gray mt-10">
+  			
+  			<dl class="sitelist_1 cl">
+					<dt class="l">常用网址</dt>
+					<dd>
+						<ul class="cl">
+							<li><a target="_blank" rel="nofollow" href="https://firfunner.github.io/" title="主页">主页</a></li>
+							<li><a target="_blank" rel="nofollow" href="http://www.baidu.com" title="百度">百度</a></li>
+							<li><a target="_blank" rel="nofollow" href="http://www.Google.com" title="Google">Google</a></li>
+							<li><a target="_blank" rel="nofollow" href="http://www.yeah.net" title="网易YEAH">网易YEAH</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://www.jd.com">京东</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://www.taobao.com">淘宝</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://www.dangdang.com">当当</a></li>
+							<li><a target="_blank" rel="nofollow" href="http://www.liaoxuefeng.com">廖雪峰官网</a></li>
+							<li><a target="_blank" rel="nofollow" href="http://study.163.com">网易云课堂</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://github.com">Github</a></li>
+							<li><a target="_blank" rel="nofollow" href="http://www.runoob.com">菜鸟教程</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://www.zhihu.com">知乎</a></li>
+							<li><a target="_blank" rel="nofollow" href="www.fontawesome.com.cn">文字图标</a></li>
+							<li><a target="_blank" rel="nofollow" href="http://download.csdn.net/">CSDN下载频道</a></li>
+							<li><a target="_blank" rel="nofollow" href="http://www.cnblogs.com/kingboy2008/p/5261771.html">前端十大框架</a></li>
+							<li><a target="_blank" rel="nofollow" href="http://bbs.itheima.com/thread-338488-1-1.html">前端学习路线及资源</a></li>
+							<li><a target="_blank" rel="nofollow" href="http://www.geeboo.com">藏书馆</a></li>
+						</ul>
+					</dd>
+				</dl>
+				<dl class="sitelist_1 cl">
+					<dt class="l">磁力搜</dt>
+					<dd>
+						<ul class="cl">
+							<li><a target="_blank" rel="nofollow" href="http://www.cili88.com/" title="账号:doteam，密码:cili88">磁力88</a></li>
+							<li><a target="_blank" rel="nofollow" href="http://www.btcherry.info/">BT樱桃</a></li>
+							<li><a target="_blank" rel="nofollow" href="http://www.bturls.net/">BT磁力链</a></li>
+							<li><a target="_blank" rel="nofollow" href="http://www.btdao5.com/">BT岛</a></li>
+							<li><a target="_blank" rel="nofollow" href="http://www.cilisou.cn/">磁力搜</a></li>
+							<li><a target="_blank" rel="nofollow" href="http://www.btmeet.org/">BTBook</a></li>
+						</ul>
+					</dd>
+				</dl>
+  			
   			<dl class="sitelist_1 cl">
 					<dt class="l">前端框架</dt>
 					<dd>
@@ -327,6 +366,9 @@
 						<ul class="cl">
 							<li><a target="_blank" rel="nofollow" href="http://www.w3school.com.cn/" title="Web 技术教程">w3school</a></li>
 							<li><a target="_blank" rel="nofollow" href="http://www.w3cschool.cn/" title="w3cschool.cn">w3cschool.cn</a></li>
+							<li><a target="_blank" rel="nofollow" href="http://www.runoob.com" title="菜鸟教程">菜鸟教程</a></li>
+							<li><a target="_blank" rel="nofollow" href="http://www.liaoxuefeng.com" title="廖雪峰官网">廖雪峰官网</a></li>
+							<li><a target="_blank" rel="nofollow" href="http://study.163.com" title="网易云课堂">网易云课堂</a></li>
 							<li><a target="_blank" rel="nofollow" href="http://www.xuetangx.com/" title="学堂在线">学堂在线</a></li>
 							<li><a target="_blank" rel="nofollow" href="http://www.imooc.com/" title="免费的IT技能学习平台">慕课网</a></li>
 							<li><a target="_blank" rel="nofollow" href="http://mooc.guokr.com/" title="果壳网旗下 慕课学习社区">MOOC学院</a></li>
@@ -400,7 +442,6 @@
 						</ul>
 					</dd>
 				</dl>
-				<div class="text-c pd-10 hidden-xs"> <a href="http://s.click.taobao.com/t?e=m%3D2%26s%3DkpSd%2F%2FsXukUcQipKwQzePCperVdZeJviEViQ0P1Vf2kguMN8XjClAgsVxmt7ihXbeVL0KyhNWcgbYbaX7Hyl4IY7HmRy%2Fc3XI9J7qX5um2uZGEGQENyuOzDVuRn8ddiDsEVVC24eqozcHtRpEUy6RHVyxRO0gvF4QxJtmCgOmCLZ%2FNxlvga2vCGHCdjJcuceS4SBz60%2BbAhXSd1ORWLc9XEqY%2Bakgpmw" title="阿里云学生主机"><img src="picture/11121009.jpg" class="img-responsive"></a> </div>
 				<dl class="sitelist_1 cl">
 					<dt class="l">站长必备</dt>
 					<dd>
