add baidu share code

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 		<link rel="stylesheet" type="text/css" href="css/iconfont.min.css" />
 
     <link rel="stylesheet" href="css/index.css" />
-
+		
+		<!--百度站长验证代码-->
+		<meta name="baidu-site-verification" content="IhojXiz1uV" />
+		
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -915,6 +918,10 @@
             </div>
         </div>
     </footer><!--页脚结束-->
+    
+    <!--百度分享代码开始-->
+		<script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":["qzone","tsina","bdysc","weixin","douban","sqq","huaban","youdao","sdo","qingbiji","people","mail","wealink","ty","fbook","twi","linkedin","h163","evernotecn","copy","print"],"bdPic":"","bdStyle":"0","bdSize":"16"},"slide":{"type":"slide","bdImg":"0","bdPos":"right","bdTop":"100"},"image":{"viewList":["qzone","tsina","tqq","renren","weixin"],"viewText":"分享到：","viewSize":"16"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["qzone","tsina","tqq","renren","weixin"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
+    <!--百度分享代码结束-->
     
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="./js/jquery-3.2.1.min.js"></script>
