--- a/index.html
+++ b/index.html
@@ -61,12 +61,33 @@
 		          </ul>
 		        </li>
 		      </ul>
-		      <form class="navbar-form navbar-left">
-		        <div class="form-group">
-		          <input type="text" class="form-control" placeholder="Search">
-		        </div>
-		        <button type="submit" class="btn btn-default">Search</button>
-		      </form>
+		      
+		      <!--百度搜索框开始-->
+		      <form class="navbar-form navbar-left" onsubmit="return baiduWithHttps(this)" action="http://www.baidu.com/baidu" target="_blank">
+				    <div class="form-group">
+				    	<input name="tn" type="hidden" value="SE_zzsearchcode_shhzc78w">
+				    	<input type="text"  class="form-control" onfocus="checkHttps" name="word"  size="30">
+				    </div>				    
+				    <button type="submit" class="btn btn-default">Search</button>
+					</form>
+					<script src="http://s1.bdstatic.com/r/www/cache/global/js/BaiduHttps_20150714_zhanzhang.js"></script>
+					<script>
+					    function checkHttps () {
+					        BaiduHttps.useHttps();    
+					    };
+					    function baiduWithHttps (formname) {
+					        var data = BaiduHttps.useHttps();
+					        if (data.s === 0) {
+					            return true;
+					        }
+					        else {
+					            formname.action = 'https://www.baidu.com/baidu' + '?ssl_s=1&ssl_c' + data.ssl_code;
+					            return true;
+					        }
+					    };
+					</script>     
+		      <!--百度搜索框结束-->
+		      
 		      <ul class="nav navbar-nav navbar-right">
 		        <!--<li><a href="#">关于我</a></li>-->
 		        <li class="dropdown">
@@ -103,7 +124,8 @@
 							<li><a target="_blank" rel="nofollow" href="https://github.com">Github</a></li>
 							<li><a target="_blank" rel="nofollow" href="http://www.runoob.com">菜鸟教程</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://www.zhihu.com">知乎</a></li>
-							<li><a target="_blank" rel="nofollow" href="www.fontawesome.com.cn">文字图标</a></li>
+							<li><a target="_blank" rel="nofollow" href="http://www.fontawesome.com.cn">文字图标</a></li>
+							<li><a target="_blank" rel="nofollow" href="http://changyan.kuaizhan.com/">畅言</a></li>
 							<li><a target="_blank" rel="nofollow" href="http://download.csdn.net/">CSDN下载频道</a></li>
 							<li><a target="_blank" rel="nofollow" href="http://www.cnblogs.com/kingboy2008/p/5261771.html">前端十大框架</a></li>
 							<li><a target="_blank" rel="nofollow" href="http://bbs.itheima.com/thread-338488-1-1.html">前端学习路线及资源</a></li>
@@ -878,6 +900,14 @@
 					</dd>
 				</dl>
   		</div>  		
+  	</section>
+  	
+  	<!--友言-->
+  	<section>
+  		<!-- UY BEGIN -->
+			<div id="uyan_frame"></div>
+			<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2132333"></script>
+			<!-- UY END -->
   	</section>
   	
   	<footer>
