--- a/blog.html
+++ b/blog.html
@@ -43,7 +43,18 @@
       <script src="js/html5shiv.min.js"></script>
       <script src="js/respond.min.js"></script>
     <![endif]-->
-
+	
+	<!--百度统计代码-->
+	<script>
+		var _hmt = _hmt || [];
+		(function() {
+		  var hm = document.createElement("script");
+		  hm.src = "https://hm.baidu.com/hm.js?b3c8466d08d8575eedbf8203b90a116c";
+		  var s = document.getElementsByTagName("script")[0]; 
+		  s.parentNode.insertBefore(hm, s);
+		})();
+	</script>
+	
 </head>
 
 <body>
@@ -103,7 +114,7 @@
 		</nav> <!--end of nav-->
 
     <!-- Page Header -->
-    <header class="intro-header" style="background-image: url('img/post-bg.jpg')">
+    <header class="intro-header" style="background-image: url('img/blog-bg.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 offset-lg-2 col-md-10 offset-md-1">
