Add Markdown Note

--- a/nav.html
+++ b/nav.html
@@ -161,6 +161,16 @@
   		<div class="bk_gray mt-10">
   			
   			<dl class="sitelist_1 cl">
+					<dt class="l">笔记暂存</dt>
+					<dd>
+						<ul class="cl">
+							<li><a target="_blank" rel="nofollow" href="./note/markdown/basic.html" title="主页">Markdown快速入门</a></li>
+							<li><a target="_blank" rel="nofollow" href="./note/markdown/index.html" title="百度">Markdown详细说明</a></li>							
+						</ul>
+					</dd>
+				</dl>
+  			
+  			<dl class="sitelist_1 cl">
 					<dt class="l">常用网址</dt>
 					<dd>
 						<ul class="cl">
