Modify nav, add gitbook links

--- a/nav.html
+++ b/nav.html
@@ -167,8 +167,9 @@
                 <dt class="l">笔记暂存</dt>
                 <dd>
                     <ul class="cl">
-                        <li><a target="_blank" rel="nofollow" href="./note/markdown/basic.html" title="主页">Markdown快速入门</a></li>
-                        <li><a target="_blank" rel="nofollow" href="./note/markdown/index.html" title="百度">Markdown详细说明</a></li>
+                        <li><a target="_blank" rel="nofollow" href="./note/markdown/basic.html" title="Markdown快速入门">Markdown快速入门</a></li>
+                        <li><a target="_blank" rel="nofollow" href="./note/markdown/index.html" title="Markdown详细说明">Markdown详细说明</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://www.madoko.net/editor.html" title="Markdown在线编辑器">Markdown在线编辑器</a></li>
                     </ul>
                 </dd>
             </dl>
@@ -187,6 +188,8 @@
                         <li><a target="_blank" rel="nofollow" href="http://www.liaoxuefeng.com">廖雪峰官网</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://study.163.com">网易云课堂</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://github.com">Github</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://www.gitbook.com">Gitbook</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://www.gitbook.com/book/uuie/practical-programming-books/details">Gitbook计算机图书</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.runoob.com">菜鸟教程</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.zhihu.com">知乎</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.jianshu.com/" title="写作软件、阅读社区">简书</a></li>
