Modify nav, add layui link!

--- a/nav.html
+++ b/nav.html
@@ -221,13 +221,15 @@
                 <dd>
                     <ul class="cl">
                         <li class="mobile"><a target="_blank" href="http://www.h-ui.net/" title="H-ui前端框架">H-ui前端框架</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://amazeui.org/" title="Amaze UI">Amaze UI</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://jeasyui.net/" title="jquery EasyUI中文网">Eeasy UI中文网</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.zui.sexy/" title="ZUI">ZUI框架</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.layui.com" title="layui">layui</a></li>
+                        <li class="mobile"><a target="_blank" rel="nofollow" href="http://www.bootcss.com/" title="Bootstrap前端框架">Bootstrap前端框架</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://easy-themes.tk/themes/preview/ace/index.html" title="后台管理系统主题">easy-themes</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://nec.netease.com/" title="网易前端CSS开源项目ENC.CSS">ENC.CSS</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://fis.baidu.com/" title="百度F.I.S前端集成解决方案">F.I.S前端集成解决方案</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.smarty.net/" title="PHP模板引擎">smarty</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://jeasyui.net/" title="jquery EasyUI中文网">Eeasy UI中文网</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://easy-themes.tk/themes/preview/ace/index.html" title="后台管理系统主题">easy-themes</a></li>
-                        <li class="mobile"><a target="_blank" rel="nofollow" href="http://www.bootcss.com/" title="Bootstrap前端框架">Bootstrap前端框架</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://amazeui.org/" title="Amaze UI">Amaze UI</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.smarty.net/" title="PHP模板引擎">smarty</a></li>                                          
                         <li><a target="_blank" rel="nofollow" href="http://www.lesscss.net/" title="LESS中国">LESS中国</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://bootflat.github.io/index.html" title="bootflat">bootflat</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.getuikit.net/" title=" YOOtheme开发的前端框架">UIkit前端框架</a></li>
@@ -256,7 +258,7 @@
                         <li><a target="_blank" rel="nofollow" href="http://threejs.org/" title="WebGL框架">three.js</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.ractivejs.org/" title="Ractive">Ractive.js</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://sui.taobao.org/sui/docs/" title="SUI">SUI框架</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.zui.sexy/" title="ZUI">ZUI框架</a></li>
+                        
                         <li><a target="_blank" rel="nofollow" href="http://www.ligerui.com/" title="LigerUI">LigerUI</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://avalonjs.github.io/" title="Avalon.js">Avalon.js</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://purecss.org/" title="Pure.CSS框架">Pure.CSS</a></li>
