Modify nav, add layui link!

--- a/nav.html
+++ b/nav.html
@@ -170,6 +170,16 @@
                         <li><a target="_blank" rel="nofollow" href="./note/markdown/basic.html" title="Markdown快速入门">Markdown快速入门</a></li>
                         <li><a target="_blank" rel="nofollow" href="./note/markdown/index.html" title="Markdown详细说明">Markdown详细说明</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.madoko.net/editor.html" title="Markdown在线编辑器">Markdown在线编辑器</a></li>
+                        <li><a target="_blank" rel="nofollow" href="./note/css" title="CSS通用笔记，Markdown形式">CSS笔记</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://zh.learnlayout.com/" title="CSS Position">CSS Position</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://css.doyoe.com/" title="CSS参考手册">CSS参考手册</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://yanxyz.github.io/emmet-docs/" title="Emmet文档">Emmet文档</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://codeguide.bootcss.com/" title="CSS编码规范">CSS编码规范</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://sass-guidelin.es/zh/" title="sass-guidelin中文版">sass-guidelin</a></li>
+                        <li><a target="_blank" rel="nofollow" href="./note/markdown/basic.html" title="Markdown快速入门">Markdown快速入门</a></li>
+                        <li><a target="_blank" rel="nofollow" href="./note/markdown/basic.html" title="Markdown快速入门">Markdown快速入门</a></li>
+                        <li><a target="_blank" rel="nofollow" href="./note/markdown/basic.html" title="Markdown快速入门">Markdown快速入门</a></li>
+                        <li><a target="_blank" rel="nofollow" href="./note/markdown/basic.html" title="Markdown快速入门">Markdown快速入门</a></li>
                     </ul>
                 </dd>
             </dl>
