--- a/nav.html
+++ b/nav.html
@@ -176,10 +176,10 @@
                         <li><a target="_blank" rel="nofollow" href="http://yanxyz.github.io/emmet-docs/" title="Emmet文档">Emmet文档</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://codeguide.bootcss.com/" title="CSS编码规范">CSS编码规范</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://sass-guidelin.es/zh/" title="sass-guidelin中文版">sass-guidelin</a></li>
-                        <li><a target="_blank" rel="nofollow" href="./note/markdown/basic.html" title="Markdown快速入门">Markdown快速入门</a></li>
-                        <li><a target="_blank" rel="nofollow" href="./note/markdown/basic.html" title="Markdown快速入门">Markdown快速入门</a></li>
-                        <li><a target="_blank" rel="nofollow" href="./note/markdown/basic.html" title="Markdown快速入门">Markdown快速入门</a></li>
-                        <li><a target="_blank" rel="nofollow" href="./note/markdown/basic.html" title="Markdown快速入门">Markdown快速入门</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://github.com/julycoding/The-Art-Of-Programming-by-July" title="编程之法，在线阅读">编程之法</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://looly.gitbooks.io/python-basic/" title="零基础学Python">零基础学Python</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.runoob.com/js/js-functions.html" title="菜鸟JS直达">菜鸟JS直达</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.runoob.com/bootstrap/bootstrap-tutorial.html" title="菜鸟Bootstrap直达">菜鸟Bootstrap</a></li>
                     </ul>
                 </dd>
             </dl>
