--- a/nav.html
+++ b/nav.html
@@ -170,6 +170,8 @@
                         <li><a target="_blank" rel="nofollow" href="./note/markdown/basic.html" title="Markdown快速入门">Markdown快速入门</a></li>
                         <li><a target="_blank" rel="nofollow" href="./note/markdown/index.html" title="Markdown详细说明">Markdown详细说明</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.madoko.net/editor.html" title="Markdown在线编辑器">Markdown在线编辑器</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://maxiang.io/" title="马克飞象">马克飞象</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://dillinger.io/" title="dillinger">dillinger</a></li>
                         <li><a target="_blank" rel="nofollow" href="./note/css" title="CSS通用笔记，Markdown形式">CSS笔记</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://zh.learnlayout.com/" title="CSS Position">CSS Position</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://css.doyoe.com/" title="CSS参考手册">CSS参考手册</a></li>
