--- a/nav.html
+++ b/nav.html
@@ -78,7 +78,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="index.html">首页 <span class="sr-only">(current)</span></a></li>
                     <li class="active"><a href="nav.html">网址导航</a></li>
-                    <li><a href="blog.html">博客</a></li>
+                    <li><a href="https://jacksoncode.github.io/myblog/">博客</a></li>
                     <li><a href="book.html">图书</a></li>
                     <li><a href="contact.html">联系我</a></li>
                     <li><a href="about.html">关于我</a></li>
