Modify blog url and add WiKi.

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -200,7 +200,7 @@
         <footer>
             <!-- 签名 -->
             <div class="signature">Powered by
-                <a href="https://github.com/TevinLi/amWiki" target="_blank">amWiki</a>
+                <a href="https://github.com/TevinLi/amWiki" target="_blank">Jackson</a>
             </div>
         </footer>
         <!-- js -->
