--- a/nav.html
+++ b/nav.html
@@ -78,8 +78,8 @@
                 <ul class="nav navbar-nav">
                     <li><a href="index.html">首页 <span class="sr-only">(current)</span></a></li>
                     <li class="active"><a href="nav.html">网址导航</a></li>
-                    <li><a href="/myblog/">博客</a></li>
-                    <li><a href="/wiki/">WiKi</a></li>
+                    <li><a href="/myblog/" target="_blank">博客</a></li>
+                    <li><a href="/wiki/" target="_blank">WiKi</a></li>
                     <li><a href="book.html">图书</a></li>
                     <li><a href="contact.html">联系我</a></li>
                     <li><a href="about.html">关于我</a></li>
