--- a/wiki/index.html
+++ b/wiki/index.html
@@ -6,7 +6,8 @@
         <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <meta name="renderer" content="webkit">
-        <title>Jackson WiKi</title>
+        <title>WiKi</title>
+        <link rel="icon" type="image/x-ico" href="logo.png" />
         <link rel="stylesheet" type="text/css" href="amWiki/css/markdownbody.github.css" />
         <link rel="stylesheet" type="text/css" href="amWiki/css/lhjs.github-gist.css" />
         <link rel="stylesheet" type="text/css" href="amWiki/css/amWiki.css" />
@@ -17,8 +18,8 @@
         <header class="header">
             <div class="header-inner">
                 <a class="logo" href="?file=首页">
-                    <img src="logo.jpg" /><i></i>
-                    <b>Jackson WiKi</b>
+                    <img src="logo.png" /><i></i>
+                    <b>WiKi</b>
                     <span>V0.1</span>
                 </a>
                 <div class="menu-icon" id="menuIcon">
