--- a/nav.html
+++ b/nav.html
@@ -417,6 +417,7 @@
                         <li><a target="_blank" rel="nofollow" href="http://www.fancynode.com/colorcube/index.html" title="配色神器">配色神器</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.fancynode.com/bigshear/home" title="BigShear合图分割软件">BigShear合图分割软件</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://guideguide.me/" title="PS参考线插件">PS参考线插件</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://livere.com/" title="国外的来必力评论系统">来必力评论系统</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://changyan.kuaizhan.com/" title="搜狐畅言评论系统">搜狐畅言评论系统</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://dev.duoshuo.com/" title="多说评论系统">多说评论系统</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.uyan.cc/" title="友言评论系统">友言评论系统</a></li>
@@ -820,13 +821,13 @@
 		<script type="text/javascript">
 	   (function(d, s) {
 	       var j, e = d.getElementsByTagName(s)[0];
-	
+
 	       if (typeof LivereTower === 'function') { return; }
-	
+
 	       j = d.createElement(s);
 	       j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
 	       j.async = true;
-	
+
 	       e.parentNode.insertBefore(j, e);
 	   })(document, 'script');
 		</script>
