--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
 		</nav> <!--end of nav-->
 
     <!-- Page Header -->
-    <header class="intro-header" style="background-image: url('img/about-bg.jpg')">
+    <header class="intro-header" style="background-image: url('http://oqaqbjwo2.bkt.clouddn.com/about-bg.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 offset-lg-2 col-md-10 offset-md-1">
