--- a/book.html
+++ b/book.html
@@ -115,7 +115,7 @@
 		</nav> <!--end of nav-->
 
     <!-- Page Header 顶部大图 -->
-    <header class="intro-header" style="background-image: url('img/book-bg.jpg')">
+    <header class="intro-header" style="background-image: url('http://oqaqbjwo2.bkt.clouddn.com/book-bg.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 offset-lg-2 col-md-10 offset-md-1">
