--- a/nav.html
+++ b/nav.html
@@ -118,7 +118,7 @@
     <!--end of nav-->
 
     <!-- Page Header -->
-    <header class="intro-header" style="background-image: url('img/nav-bg.jpg')">
+    <header class="intro-header" style="background-image: url('http://oqaqbjwo2.bkt.clouddn.com/nav-bg.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 offset-lg-2 col-md-10 offset-md-1">
