--- a/wiki/index.html
+++ b/wiki/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" type="text/css" href="amWiki/css/markdownbody.github.css" />
         <link rel="stylesheet" type="text/css" href="amWiki/css/lhjs.github-gist.css" />
         <link rel="stylesheet" type="text/css" href="amWiki/css/amWiki.css" />
+        <link rel="stylesheet" type="text/css" href="amWiki/css/jks.css" />
     </head>
 
     <body>
@@ -27,6 +28,9 @@
                         <use xlink:href="#icon:navStart"></use>
                     </svg>
                 </div>
+            </div>
+            <div class="jks-fr">
+              <a href="https://jacksoncode.github.io"><strong>返回JacksonCode</strong></a>
             </div>
         </header>
         <!-- 页面 -->
@@ -45,6 +49,7 @@
                     </svg>
                 </div>
                 <nav class="menubar scroller" id="menuBar" data-x-rolling="true">
+
                     <div class="scroller-inner">
                         <div class="scroller-content"></div>
                     </div>
