--- a/nav.html
+++ b/nav.html
@@ -193,7 +193,8 @@
                 <dt class="l">常用网址</dt>
                 <dd>
                     <ul class="cl">
-                        <li><a target="_blank" rel="nofollow" href="https://jacksoncode.github.io/" title="主页">主页</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://jacksoncode.github.io" title="主页">主页-io</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://codeclub.bid" title="主页">主页-new</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.baidu.com" title="百度">百度</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.Google.com" title="Google">Google</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.yeah.net" title="网易YEAH">网易YEAH</a></li>
