閫氳繃鑴氭湰鎻愪氦鏂囦欢

--- a/nav.html
+++ b/nav.html
@@ -215,6 +215,7 @@
                         <li><a target="_blank" rel="nofollow" href="http://www.cnblogs.com/kingboy2008/p/5261771.html">前端十大框架</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://bbs.itheima.com/thread-338488-1-1.html">前端学习路线及资源</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.geeboo.com">藏书馆</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://netcn.console.aliyun.com">阿里云控制台</a></li>
                     </ul>
                 </dd>
             </dl>
@@ -234,10 +235,12 @@
             </dl>
 
             <dl class="sitelist_1 cl">
-                <dt class="l">磁力搜</dt>
+                <dt class="l">资源</dt>
                 <dd>
                     <ul class="cl">
-                        <li><a target="_blank" rel="nofollow" href="http://www.cili88.com/" title="账号:doteam，密码:cili88">磁力88</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.ttmeiju.com" title="天天美剧">天天美剧</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.cnscg.com/" title="JacksonCode">圣城家园</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.cili88.com" title="账号:doteam，密码:cili88">磁力88</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.1024bt.org" title="1024BT">1024BT</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.bt1024.org" title="BT工厂">BT工厂</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://5ad.pw" title="草社区/qwerty12543/qwerty10086">草社区</a></li>
