commit file throug Batch

--- a/nav.html
+++ b/nav.html
@@ -255,6 +255,57 @@
             </dl>
 
             <dl class="sitelist_1 cl">
+                <dt class="l">学习</dt>
+                <dd>
+                    <ul class="cl">
+                        <li><a target="_blank" rel="nofollow" href="http://www.w3school.com.cn/" title="Web 技术教程">w3school</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.w3cschool.cn/" title="w3cschool.cn">w3cschool.cn</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.runoob.com" title="菜鸟教程">菜鸟教程</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.liaoxuefeng.com" title="廖雪峰官网">廖雪峰官网</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://study.163.com" title="网易云课堂">网易云课堂</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.imooc.com/" title="免费的IT技能学习平台">慕课网</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.icourse163.org/" title="中国大学慕课">中国大学慕课</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://chuanke.baidu.com/" title="百度传课">百度传课</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://ke.qq.com/" title="腾讯课堂">腾讯课堂</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://chuanke.baidu.com/" title="百度传课" style="display:none">待添加</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://chuanke.baidu.com/" title="百度传课" style="display:none">待添加</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.xuetangx.com/" title="学堂在线">学堂在线</a></li>                        
+                        <li><a target="_blank" rel="nofollow" href="http://mooc.guokr.com/" title="果壳网旗下 慕课学习社区">MOOC学院</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://aibusy.com/" title="Busy前端工作室">Busy前端工作室</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.miaov.com/data.html.php" title="前端培训">妙味课堂</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.hubwiz.com/" title="汇智网">汇智网</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.zhinengshe.com/" title="前端培训">智能社</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.lampbrother.net/phptrain/video.php" title="兄弟连视频教程">php视频教程</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.houdunwang.com/" title="后盾网">后盾网</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.w3cfuns.com/" title="w3cfuns">w3cfuns</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.aa25.cn/index.shtml" title="">DIV+CSS</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.w3.org/" title="W3C">W3C</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://flash63.com/index.php?iRecUID=2881" title="Flash视频教程">Flash路上</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://wenku.it168.com/" title="IT技术文档">IT168文库</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://i.youku.com/u/UMzE3OTYzMDk2" title="北京酷学酷玩">【酷“艾”英语】</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.yuantiku.com/" title="在线司法考试">猿题库</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.atguigu.com/download.shtml" title="免费java视频教程下载">尚硅谷java视频教程</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://daxue.taobao.com/" title="淘宝大学">淘宝大学</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.itheima.com/" title="黑马程序员">黑马程序员</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://zihua.com.cn/" title="自化创意">自化创意</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.xueui.cn/" title="学UI">学UI</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://e.jikexueyuan.com/invite/index.html?ZnJvbV9jb2RlPU1ISzJPViZ1bmFtZT1xcV9udzVxZHNqYSZjaGFubmVsPWludml0ZV9zaGFyZWJ1dHRvbl9kaXJlY3QwNA==" title="极客学院">极客学院</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.xsteach.com/" title="邢帅教育">邢帅教育</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.icoolxue.com/" title="爱酷学习网">爱酷学习网</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.luobo360.com/" title="萝卜网">萝卜网</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.gogoup.com/" title="站酷设计师教育平台">站酷高高手</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.ganlantu.com/" title="橄榄图摄影课堂">橄榄图摄影课堂</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.codefordream.com/" title="codefordream">codefordream</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.lvtao.net/content/book/node.js.htm" title="七天学会NodeJS">七天学会NodeJS</a>
+                        <li><a target="_blank" rel="nofollow" href="http://www.edu360.cn/" title="小牛学堂">小牛学堂</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://www.codecademy.com/" title="Learn to code">Codecademy</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.qiqiuyu.com/" title="气泡学院"></a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.zhufengpeixun.cn/" title="珠峰培训">珠峰培训</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://jirengu.com//" title="饥人谷前端培训">饥人谷</a></li>
+                    </ul>
+                </dd>
+            </dl>
+            <dl class="sitelist_1 cl">
                 <dt class="l">前端框架</dt>
                 <dd>
                     <ul class="cl">
@@ -296,7 +347,6 @@
                         <li><a target="_blank" rel="nofollow" href="http://threejs.org/" title="WebGL框架">three.js</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.ractivejs.org/" title="Ractive">Ractive.js</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://sui.taobao.org/sui/docs/" title="SUI">SUI框架</a></li>
-
                         <li><a target="_blank" rel="nofollow" href="http://www.ligerui.com/" title="LigerUI">LigerUI</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://avalonjs.github.io/" title="Avalon.js">Avalon.js</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://purecss.org/" title="Pure.CSS框架">Pure.CSS</a></li>
@@ -489,54 +539,7 @@
                     </ul>
                 </dd>
             </dl>
-            <dl class="sitelist_1 cl">
-                <dt class="l">学习</dt>
-                <dd>
-                    <ul class="cl">
-                        <li><a target="_blank" rel="nofollow" href="http://www.w3school.com.cn/" title="Web 技术教程">w3school</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.w3cschool.cn/" title="w3cschool.cn">w3cschool.cn</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.runoob.com" title="菜鸟教程">菜鸟教程</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.liaoxuefeng.com" title="廖雪峰官网">廖雪峰官网</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://study.163.com" title="网易云课堂">网易云课堂</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.xuetangx.com/" title="学堂在线">学堂在线</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.imooc.com/" title="免费的IT技能学习平台">慕课网</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://mooc.guokr.com/" title="果壳网旗下 慕课学习社区">MOOC学院</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://aibusy.com/" title="Busy前端工作室">Busy前端工作室</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.miaov.com/data.html.php" title="前端培训">妙味课堂</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.hubwiz.com/" title="汇智网">汇智网</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.zhinengshe.com/" title="前端培训">智能社</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.lampbrother.net/phptrain/video.php" title="兄弟连视频教程">php视频教程</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.houdunwang.com/" title="后盾网">后盾网</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.w3cfuns.com/" title="w3cfuns">w3cfuns</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.aa25.cn/index.shtml" title="">DIV+CSS</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.w3.org/" title="W3C">W3C</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://flash63.com/index.php?iRecUID=2881" title="Flash视频教程">Flash路上</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://wenku.it168.com/" title="IT技术文档">IT168文库</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://i.youku.com/u/UMzE3OTYzMDk2" title="北京酷学酷玩">【酷“艾”英语】</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.yuantiku.com/" title="在线司法考试">猿题库</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.atguigu.com/download.shtml" title="免费java视频教程下载">尚硅谷java视频教程</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://daxue.taobao.com/" title="淘宝大学">淘宝大学</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.itheima.com/" title="黑马程序员">黑马程序员</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://zihua.com.cn/" title="自化创意">自化创意</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.xueui.cn/" title="学UI">学UI</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://e.jikexueyuan.com/invite/index.html?ZnJvbV9jb2RlPU1ISzJPViZ1bmFtZT1xcV9udzVxZHNqYSZjaGFubmVsPWludml0ZV9zaGFyZWJ1dHRvbl9kaXJlY3QwNA==" title="极客学院">极客学院</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.xsteach.com/" title="邢帅教育">邢帅教育</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.icoolxue.com/" title="爱酷学习网">爱酷学习网</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.luobo360.com/" title="萝卜网">萝卜网</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.gogoup.com/" title="站酷设计师教育平台">站酷高高手</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.ganlantu.com/" title="橄榄图摄影课堂">橄榄图摄影课堂</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.codefordream.com/" title="codefordream">codefordream</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.lvtao.net/content/book/node.js.htm" title="七天学会NodeJS">七天学会NodeJS</a>
-                            <li><a target="_blank" rel="nofollow" href="http://www.edu360.cn/" title="小牛学堂">小牛学堂</a></li>
-                            <li><a target="_blank" rel="nofollow" href="https://www.codecademy.com/" title="Learn to code">Codecademy</a></li>
-                            <li>
-                                <a target="_blank" rel="nofollow" href="http://www.qiqiuyu.com/" title="气泡学院"></a>
-                            </li>
-                            <li><a target="_blank" rel="nofollow" href="http://www.zhufengpeixun.cn/" title="珠峰培训">珠峰培训</a></li>
-                            <li><a target="_blank" rel="nofollow" href="http://jirengu.com//" title="饥人谷前端培训">饥人谷</a></li>
-                    </ul>
-                </dd>
-            </dl>
+            
             <dl class="sitelist_1 cl">
                 <dt class="l">素材资源</dt>
                 <dd>
