--- a/nav.html
+++ b/nav.html
@@ -209,6 +209,9 @@
                         <li><a target="_blank" rel="nofollow" href="http://www.runoob.com">菜鸟教程</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.zhihu.com">知乎</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.jianshu.com/" title="写作软件、阅读社区">简书</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.ituring.com.cn/" title="图灵社区">图灵社区</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.epubit.com.cn/" title="异步社区">异步社区</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://www.douban.com/" title="豆瓣">豆瓣</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.fontawesome.com.cn">文字图标</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.uyan.cc/index.php">友言</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://download.csdn.net/">CSDN下载频道</a></li>
