commit file throug Batch

--- a/nav.html
+++ b/nav.html
@@ -272,7 +272,7 @@
                         <li><a target="_blank" rel="nofollow" href="https://ke.qq.com/" title="腾讯课堂">腾讯课堂</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://chuanke.baidu.com/" title="百度传课" style="display:none">待添加</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://chuanke.baidu.com/" title="百度传课" style="display:none">待添加</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.xuetangx.com/" title="学堂在线">学堂在线</a></li>                        
+                        <li><a target="_blank" rel="nofollow" href="http://www.xuetangx.com/" title="学堂在线">学堂在线</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://mooc.guokr.com/" title="果壳网旗下 慕课学习社区">MOOC学院</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://aibusy.com/" title="Busy前端工作室">Busy前端工作室</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.miaov.com/data.html.php" title="前端培训">妙味课堂</a></li>
@@ -542,7 +542,7 @@
                     </ul>
                 </dd>
             </dl>
-            
+
             <dl class="sitelist_1 cl">
                 <dt class="l">素材资源</dt>
                 <dd>
@@ -830,7 +830,7 @@
         <!-- UY END -->
     </section>
 
-	<!-- 来必力City版安装代码 -->
+	<!-- 来必力City版安装代码 
 	<div id="lv-container" data-id="city" data-uid="MTAyMC8yODc2Ni81MzM3">
 		<script type="text/javascript">
 	   (function(d, s) {
@@ -846,7 +846,7 @@
 	   })(document, 'script');
 		</script>
 	<noscript> 为正常使用来必力评论功能请激活JavaScript</noscript>
-	</div>
+	</div>-->
 	<!-- City版安装代码已完成 -->
 
     <hr>
