commit file throug Batch

--- a/book.html
+++ b/book.html
@@ -27,6 +27,7 @@
 	<meta name="baidu-site-verification" content="IhojXiz1uV" />
 
 	<link rel="stylesheet" href="css/index.css" />
+	<link rel="stylesheet" href="css/book.css" />
 
     <!-- Additional fonts for this theme -->
     <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -129,6 +130,19 @@
     </header>
 
     <!--网页正文内容放在这里-->
+    <section class="container-fluid">
+    	<div class="book-form" id="book-form">
+    		<h3>可以勾选你需要的图书分类：</h3>
+    		<form class="container-fluid">
+				<span><input type="checkbox" name="book" value="java">Java</span>
+				<span><input type="checkbox" name="book" value="javascript">JavaScript</span>
+				<span><input type="checkbox" name="book" value="html">Html</span>
+				<span><input type="checkbox" name="book" value="python">Python</span>
+				<span><input type="checkbox" name="book" value="thinking">编程思想</span>
+				<span><input type="checkbox" name="book" value="reading">读书</span>				
+			</form>
+    	</div>
+    </section>
 
   	<!--友言，评论框，不需要的页面可以删除-->
   	<section class="youyan container-fluid">
